--- a/catkin_ws/src/dynamic_params/cfg/UnitedSoccerReconf.cfg
+++ b/catkin_ws/src/dynamic_params/cfg/UnitedSoccerReconf.cfg
@@ -1,19 +1,8 @@
 #!/usr/bin/env python
 PACKAGE = "dynamic_params"
-
 import roslib;roslib.load_manifest(PACKAGE)
 from dynamic_reconfigure.parameter_generator import *
-
 gen = ParameterGenerator()
-
-gen.add("H_Max", int_t, 0, "H Max", 255, 0, 255)
-gen.add("H_Min", int_t, 0, "H Min", 0, 0, 255)
-gen.add("S_Max", int_t, 0, "S Max", 255, 0, 255)
-gen.add("S_Min", int_t, 0, "S Min", 0, 0, 255)
-gen.add("V_Max", int_t, 0, "V Max", 255, 0, 255)
-gen.add("V_Min", int_t, 0, "V Min", 0, 0, 255)
-gen.add("Min_Size", int_t, 0, "Min Size", 0, 0, 255)
-
 
 gen.add("Pan_KP", double_t, 0, "Pan KP", .0, 0, 1)
 gen.add("Pan_KI", double_t, 0, "Pan KI", .0, 0, 1)
@@ -25,8 +14,17 @@ gen.add("Tilt_KD", double_t, 0, "Tilt KD", .0, 0, 0.000010)
 
 gen.add("Pan_Step", double_t, 0, "Pan Step", .0, 0, 0.2)
 gen.add("Tilt_Step", double_t, 0, "Tilt Step", .0, 0, 0.5)
-gen.add("Tilt_Angle", double_t, 0, "Tilt Angle", .0, -2, 0)
-gen.add("Scan_Rate", int_t, 0, "Scan rate", 0, 0, 10)
+
+gen.add("Pan_Kick", double_t, 0, "pan Kick", .0, -1.5, 0)
+gen.add("Tilt_Kick", double_t, 0, "Tilt Kick", .0, -2, 0)
+
 gen.add("Body_KP", double_t, 0, "Body KP", 0, 0, 1)
 
-exit(gen.generate(PACKAGE, "marathon_params", "MarathonReconf"))
+gen.add("KP_Ball_Pos_X", double_t, 0, "KP Ball Pos X", 0, 0, 1)
+gen.add("KP_Ball_Pos_Y", double_t, 0, "KP Ball Pos Y", 0, 0, 1)
+
+gen.add("KP_Compass_X", double_t, 0, "KP Compass X", 0, 0, 1)
+gen.add("KP_Compass_Y", double_t, 0, "KP Compass Y", 0, 0, 1)
+gen.add("KP_Compass_A", double_t, 0, "KP Compass A", 0, 0, 1)
+
+exit(gen.generate(PACKAGE, "united_soccer_params", "UnitedSoccerReconf"))
